--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "Mathpad",
     "description": "",
     "version": "0.0.1",
+    "license": "MIT",
     "engines": {
         "vscode": "^1.44.0"
     },
