Small syntax goof in actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,12 @@ jobs:
       - run: npm install
 
       - name: Build VSIX package
-        run:
+        run: |
           npm install -g vsce
           vsce package -o mathpad.vsix
 
       - name: Upload VSIX package
         uses: actions/upload-artifact@v2
         with:
-          name: mathpad-${{github.sha}}.vsix
+          name: mathpad-${{ github.sha }}.vsix
           path: mathpad.vsix
