Add support for dates and currency

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "dependencies": {
         "@types/mathjs": "^6.0.5",
+        "axios": "^0.19.2",
         "mathjs": "^6.6.4"
     },
     "devDependencies": {
