Set extension kind

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "bugs": {
         "url": "https://github.com/sagebind/mathpad/issues"
     },
+    "extensionKind": [
+        "ui",
+        "workspace"
+    ],
     "activationEvents": [
         "onLanguage:markdown"
     ],
