use regular expressions for matching file names rather than simply looking at extension
This allows for matching new tabs (Untitled.*) or files with no extension

--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
         "configuration": {
             "title": "Mathpad",
             "properties": {
-                "Mathpad.fileExtensions": {
+                "Mathpad.filePatterns": {
                     "type": "array",
-                    "default": [".md"],
-                    "description": "File extensions for which to run Mathpad"
+                    "default": [
+                        ".*\\.md"
+                    ],
+                    "description": "File name patterns (regular expressions) for which to run Mathpad"
                 },
                 "Mathpad.enabled": {
                     "type": "boolean",
